# piglatin

./: LICENSE  PKG-INFO  README.md  piglatin.py  pyproject.toml  setup.py
.github/workflows/: pythonpublish.yml
piglatin/: __init__.py
