

[project]
name = "piglatin"
version = "1.0.2"
description = "Converts text to piglatin."
authors = [
    "Brendan Abel <007brendan@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/bpabel/piglatin"
repository = "https://github.com/bpabel/piglatin"


[build-system]
requires = ["setuptools", "wheel"]
